--- a/src/Topxia/AdminBundle/Resources/views/Default/index.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/Default/index.html.twig
@@ -69,18 +69,17 @@
         <div class="pull-right">
           <span class="mrl text-sm js-data-switch-time">2016/09/01~2016/09/07</span>
           <div class="btn-group btn-group-xs">
-            <button type="button" class="btn btn-primary js-data-switch-button" data-time="2016/09/01~2016/09/07"
-                    data-url="{{ path('admin_user_week_statistic') }}">最近7天
+            <button type="button" class="btn btn-primary js-user-switch-button" data-time="2016/09/01~2016/09/07"
+                    data-url="{{ path('admin_user_statistic', {period: 'week'}) }}">最近7天
             </button>
-            <button type="button" class="btn btn-default js-data-switch-button" data-time="2016/09/01~2016/09/30"
-                    data-url="{{ path('admin_user_month_statistic') }}">最近30天
+            <button type="button" class="btn btn-default js-user-switch-button" data-time="2016/09/01~2016/09/30"
+                    data-url="{{ path('admin_user_statistic', {period: 'month'}) }}">最近30天
             </button>
           </div>
         </div>
         <h3 class="panel-title">{{ '用户统计'|trans }}</h3>
       </div>
-      <div class="panel-body js-statistic-areas" id="user-statistic" style="height:320px;"
-           data-url="{{ path('admin_user_week_statistic') }}">
+      <div class="panel-body js-statistic-areas" id="user-statistic" style="height:320px;">
 
       </div>
     </div>
@@ -90,15 +89,19 @@
         <div class="panel panel-default panel-380">
           <div class="panel-heading">
             <div class="pull-right">
-              <span class="mrl text-sm">2016/09/01~2016/09/07 </span>
+              <span class="mrl text-sm js-data-switch-time">2016/09/01~2016/09/07 </span>
               <div class="btn-group btn-group-xs">
-                <button type="button" class="btn btn-primary">最近7天</button>
-                <button type="button" class="btn btn-default">最近30天</button>
+                <button type="button" class="btn btn-primary js-study-switch-button" data-time="2016/09/01~2016/09/07"
+                        data-url="{{ path('admin_study_statistic', {period: 'week'}) }}">最近7天
+                </button>
+                <button type="button" class="btn btn-default js-study-switch-button" data-time="2016/09/01~2016/09/07"
+                        data-url="{{ path('admin_study_statistic', {period: 'month'}) }}">最近30天
+                </button>
               </div>
             </div>
             <h3 class="panel-title">{{ '学习人次统计'|trans }}</h3>
           </div>
-          <div class="panel-body" id="study-count-statistic" style="height:320px;">
+          <div class="panel-body js-statistic-areas" id="study-count-statistic" style="height:320px;">
 
           </div>
         </div>
@@ -107,15 +110,17 @@
         <div class="panel panel-default panel-380">
           <div class="panel-heading">
             <div class="pull-right">
-              <span class="mrl text-sm">2016/09/01~2016/09/07 </span>
+              <span class="mrl text-sm js-data-switch-time">2016/09/01~2016/09/07 </span>
               <div class="btn-group btn-group-xs">
-                <button type="button" class="btn btn-primary">{{ '最近7天'|trans }}</button>
-                <button type="button" class="btn btn-default">{{ '最近30天'|trans }}</button>
+                <button type="button" class="btn btn-primary js-order-switch-button" data-time="2016/09/01~2016/09/07"
+                        data-url="{{ path('admin_order_statistic', {period: 'week'}) }}">{{ '最近7天'|trans }}</button>
+                <button type="button" class="btn btn-default js-order-switch-button" data-time="2016/09/01~2016/09/07"
+                        data-url="{{ path('admin_order_statistic',{period: 'month'}) }}">{{ '最近30天'|trans }}</button>
               </div>
             </div>
             <h3 class="panel-title">{{ '付费订单统计'|trans }}</h3>
           </div>
-          <div class="panel-body" id="pay-order-statistic" style="height:320px;">
+          <div class="panel-body js-statistic-areas" id="pay-order-statistic" style="height:320px;">
 
           </div>
         </div>
@@ -127,17 +132,20 @@
         <div class="panel panel-default panel-420">
           <div class="panel-heading">
             <div class="pull-right">
-              <span class="mrl text-sm">2016/09/01~2016/09/07 </span>
+              <span class="mrl text-sm js-data-switch-time">2016/09/01~2016/09/07 </span>
               <div class="btn-group btn-group-xs">
-                <button type="button" class="btn btn-primary">{{ '最近7天'|trans }}</button>
-                <button type="button" class="btn btn-default">{{ '最近30天'|trans }}</button>
+                <button type="button" class="btn btn-primary js-lesson-switch-button" data-time="2016/09/01~2016/09/07"
+                        data-url="{{ path('admin_lesson_learn_statistic', {period: 'week'}) }}">{{ '最近7天'|trans }}</button>
+                <button type="button" class="btn btn-default js-lesson-switch-button" data-time="2016/09/01~2016/09/07"
+                        data-url="{{ path('admin_lesson_learn_statistic', {period: 'month'}) }}">{{ '最近30天'|trans }}</button>
               </div>
             </div>
-            <h3 class="panel-title">{{ '学习课时数'|trans }} <span class="glyphicon glyphicon-question-sign text-sm"
-                                                              data-toggle="tooltip" data-placement="top"
-                                                              title="{{ '每天课时学习数量(包括公开课)'|trans }}"></span></h3>
+            <h3 class="panel-title">{{ '学习课时数'|trans }}
+              <span class="glyphicon glyphicon-question-sign text-sm"
+                    data-toggle="tooltip" data-placement="top"
+                    title="{{ '每天课时学习数量(包括公开课)'|trans }}"></span></h3>
           </div>
-          <div class="panel-body" id="study-lesson-count-statistic" style="height:360px;">
+          <div class="panel-body js-statistic-areas" id="study-lesson-count-statistic" style="height:360px;">
 
           </div>
         </div>
@@ -147,13 +155,15 @@
           <div class="panel-heading">
             <div class="pull-right">
               <div class="btn-group btn-group-xs">
-                <button type="button" class="btn btn-primary">{{ '最近7天'|trans }}</button>
-                <button type="button" class="btn btn-default">{{ '最近30天'|trans }}</button>
+                <button type="button" class="btn btn-primary js-course-switch-button" data-time="2016/09/01~2016/09/07"
+                        data-url="{{ path('admin_course_explore', {period: 'week'}) }}">{{ '最近7天'|trans }}</button>
+                <button type="button" class="btn btn-default  js-course-switch-button" data-time="2016/09/01~2016/09/07"
+                        data-url="{{ path('admin_course_explore', {period: 'month'}) }}">{{ '最近30天'|trans }}</button>
               </div>
             </div>
             <h3 class="panel-title">{{ '课程排行榜'|trans }}</h3>
           </div>
-          <div class="panel-body">
+          <div class="panel-body js-statistic-areas" id="course-explore-list" >
             <table class="table table-condensed table-noborder table-overflow">
               <thead>
               <tr>
@@ -381,7 +391,7 @@
                   <a class="link-primary" href="">Edusoho安装教程</a>
                 </td>
                 <td class="text-middle">
-                  <div class="search-count js-search-count" data-count="30"></div>
+                  <div class="search-count js-cloud-search" data-count="30"></div>
                 </td>
                 <td>30</td>
               </tr>
@@ -390,7 +400,7 @@
                   <a class="link-primary" href="">Edusoho安装教程</a>
                 </td>
                 <td class="text-middle">
-                  <div class="search-count js-search-count" data-count="20"></div>
+                  <div class="search-count js-cloud-search" data-count="20"></div>
                 </td>
                 <td>20</td>
               </tr>
@@ -399,7 +409,7 @@
                   <a class="link-primary" href="">Edusoho安装教程</a>
                 </td>
                 <td>
-                  <div class="search-count js-search-count" data-count="13"></div>
+                  <div class="search-count js-cloud-search" data-count="13"></div>
                 </td>
                 <td>13</td>
               </tr>
@@ -408,7 +418,7 @@
                   <a class="link-primary" href="">Edusoho安装教程</a>
                 </td>
                 <td class="text-middle">
-                  <div class="search-count js-search-count" data-count="10"></div>
+                  <div class="search-count js-cloud-search" data-count="10"></div>
                 </td>
                 <td>10</td>
               </tr>
@@ -417,7 +427,7 @@
                   <a class="link-primary" href="">Edusoho安装教程</a>
                 </td>
                 <td class="text-middle">
-                  <div class="search-count js-search-count" data-count="10"></div>
+                  <div class="search-count js-cloud-search" data-count="10"></div>
                 </td>
                 <td>10</td>
               </tr>
@@ -426,7 +436,7 @@
                   <a class="link-primary" href="">Edusoho安装教程</a>
                 </td>
                 <td class="text-middle">
-                  <div class="search-count js-search-count" data-count="10"></div>
+                  <div class="search-count js-cloud-search" data-count="10"></div>
                 </td>
                 <td>10</td>
               </tr>
@@ -435,7 +445,7 @@
                   <a class="link-primary" href="">Edusoho安装教程</a>
                 </td>
                 <td class="text-middle">
-                  <div class="search-count js-search-count" data-count="8"></div>
+                  <div class="search-count js-cloud-search" data-count="8"></div>
                 </td>
                 <td>8</td>
               </tr>
@@ -444,7 +454,7 @@
                   <a class="link-primary" href="">Edusoho安装教程</a>
                 </td>
                 <td class="text-middle">
-                  <div class="search-count js-search-count" data-count="8"></div>
+                  <div class="search-count js-cloud-search" data-count="8"></div>
                 </td>
                 <td>8</td>
               </tr>
@@ -453,7 +463,7 @@
                   <a class="link-primary" href="">Edusoho安装教程</a>
                 </td>
                 <td class="text-middle">
-                  <div class="search-count js-search-count" data-count="6"></div>
+                  <div class="search-count js-cloud-search" data-count="6"></div>
                 </td>
                 <td>6</td>
               </tr>
@@ -462,7 +472,7 @@
                   <a class="link-primary" href="">Edusoho安装教程</a>
                 </td>
                 <td class="text-middle">
-                  <div class="search-count js-search-count" data-count="4"></div>
+                  <div class="search-count js-cloud-search" data-count="4"></div>
                 </td>
                 <td>4</td>
               </tr>
