--- a/src/CourseTask/TaskBundle/Resources/views/TaskManage/list-item.html.twig
+++ b/src/CourseTask/TaskBundle/Resources/views/TaskManage/list-item.html.twig
@@ -3,4 +3,6 @@
 	<a data-role='delete-task' href="javascript:;" data-url="{{path('course_task_delete', {id:task.id,courseId:task.courseId})}}">删除</a>
 
 	<a data-role='update-task' href="javascript:;" data-toggle="modal" data-target="#modal" data-url="{{path('course_task_update', {id:task.id,courseId:task.courseId})}}">修改</a>
+
+	<a href="{{path('course_task_show', {id:task.id,courseId:task.courseId})}}" target="_blank">进入学习</a>
 </li>
