--- a/src/CourseTask/TaskBundle/Resources/views/Task/show.html.twig
+++ b/src/CourseTask/TaskBundle/Resources/views/Task/show.html.twig
@@ -6,4 +6,5 @@
 
 {% block content %}
 	<iframe src="{{path('course_task_activity_show',{id:task.id,courseId:task.courseId})}}"></iframe>
+	<button id="task-create-form-submit" type="submit" class="btn btn-primary pull-right" data-toggle="form-submit" data-target="#task-create-form" data-submiting-text="{{'正在保存...'|trans}}" >{{'完成'|trans}}</button>
 {% endblock %}
