--- a/web/assets/v2/less/page/course-detail.less
+++ b/web/assets/v2/less/page/course-detail.less
@@ -300,6 +300,10 @@
       @media (max-width: @screen-xs-max) {
         width: 50%;
       }
+      .text-expire-time {
+        position: absolute;
+        margin-top: -18px;
+      }
       .btn {
         padding: 10px 30px;
       }
