--- a/src/Topxia/AdminBundle/Resources/views/Default/Parts/course-explore-table.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/Default/Parts/course-explore-table.html.twig
@@ -1,1 +1,21 @@
-333
+<table class="table table-condensed table-noborder table-overflow">
+  <thead>
+  <tr>
+    <th width="10%"></th>
+    <th width="70%">{{ '课程名'|trans }}</th>
+    <th width="25%">{{ '新增学员'|trans }}</th>
+  </tr>
+  </thead>
+  <tbody>
+  {% for memberCount in memberCounts %}
+    <tr>
+      <td>{{ loop.index }}</td>
+      <td>
+        <a class="link-primary"
+           href="{{ path('course_show',{id: memberCount.courseId}) }}">{{ courses[ memberCount.courseId].title }}</a>
+      </td>
+      <td class="pull-right prl">{{ memberCount.count }}</td>
+    </tr>
+  {% endfor %}
+  </tbody>
+</table>
