app-im-setting-text-fix

--- a/src/Topxia/AdminBundle/Resources/views/EduCloud/app-im-setting.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/EduCloud/app-im-setting.html.twig
@@ -69,6 +69,7 @@
 
       <h4>{{'IM功能说明'|trans}}</h4>
 
+      {{'当前功能仅支持阔知学堂3.6及以上版本；'|trans}}<br>
       {{'开启后，课程和班级会生成相应即时聊天讨论组和使用个人聊天功能；'|trans}}<br>
       {{'利于老师发布课程、班级的相关信息并且及时、有效的通知到学生；'|trans}}<br>
       {{'利于师生无障碍的针对课程、班级的内容进行沟通和交流；'|trans}}<br>
