--- a/src/Topxia/WebBundle/Resources/views/My/layout.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/My/layout.html.twig
@@ -47,7 +47,7 @@
           </li>
 
           <li class="list-group-item {% if side_nav == 'my-teaching-check' %} active {% endif %}">
-            <a href="{{path('course_manage_list_teacher_test_reviewing') }}">{{'试卷批阅'|trans}}
+            <a href="{{path('course_manage_list_teacher_test',{status:'reviewing'}) }}">{{'试卷批阅'|trans}}
             </a>
           </li>
 
