付费订单的统计

--- a/src/Topxia/AdminBundle/Resources/views/Default/Parts/course-explore-table.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/Default/Parts/course-explore-table.html.twig
@@ -16,6 +16,8 @@
       </td>
       <td class="pull-right prl">{{ memberCount.count }}</td>
     </tr>
+  {% else %}
+    <tr><td><div class="empty">{{'暂无课程'|trans}}</div></td></tr>
   {% endfor %}
   </tbody>
 </table>
