--- a/src/Topxia/AdminBundle/Resources/views/Default/index.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/Default/index.html.twig
@@ -41,12 +41,14 @@
     <div class="panel panel-default panel-380">
       <div class="panel-heading">
         <div class="pull-right">
-          <span class="mrl text-sm js-data-switch-time">2016/09/01~2016/09/07</span>
+          <span class="mrl text-sm js-data-switch-time">{{ dates.weekDate }}~{{ 'now'|date('Y-m-d') }}</span>
           <div class="btn-group btn-group-xs">
-            <button type="button" class="btn btn-primary js-user-switch-button" data-time="2016/09/01~2016/09/07"
+            <button type="button" class="btn btn-primary js-user-switch-button"
+                    data-time="{{ dates.weekDate }}~{{ 'now'|date('Y-m-d') }}"
                     data-url="{{ path('admin_user_statistic', {period: 'week'}) }}">最近7天
             </button>
-            <button type="button" class="btn btn-default js-user-switch-button" data-time="2016/09/01~2016/09/30"
+            <button type="button" class="btn btn-default js-user-switch-button"
+                    data-time="{{ dates.monthDate }}~{{ 'now'|date('Y-m-d') }}"
                     data-url="{{ path('admin_user_statistic', {period: 'month'}) }}">最近30天
             </button>
           </div>
@@ -63,12 +65,14 @@
         <div class="panel panel-default panel-380">
           <div class="panel-heading">
             <div class="pull-right">
-              <span class="mrl text-sm js-data-switch-time">2016/09/01~2016/09/07 </span>
+              <span class="mrl text-sm js-data-switch-time">{{ dates.weekDate }}~{{ 'now'|date('Y-m-d') }} </span>
               <div class="btn-group btn-group-xs">
-                <button type="button" class="btn btn-primary js-study-switch-button" data-time="2016/09/01~2016/09/07"
+                <button type="button" class="btn btn-primary js-study-switch-button"
+                        data-time="{{ dates.weekDate }}~{{ 'now'|date('Y-m-d') }}"
                         data-url="{{ path('admin_study_statistic', {period: 'week'}) }}">最近7天
                 </button>
-                <button type="button" class="btn btn-default js-study-switch-button" data-time="2016/09/01~2016/09/07"
+                <button type="button" class="btn btn-default js-study-switch-button"
+                        data-time="{{ dates.monthDate }}~{{ 'now'|date('Y-m-d') }}"
                         data-url="{{ path('admin_study_statistic', {period: 'month'}) }}">最近30天
                 </button>
               </div>
@@ -84,17 +88,20 @@
         <div class="panel panel-default panel-380">
           <div class="panel-heading">
             <div class="pull-right">
-              <span class="mrl text-sm js-data-switch-time">2016/09/01~2016/09/07 </span>
+              <span class="mrl text-sm js-data-switch-time">{{ dates.weekDate }}~{{ 'now'|date('Y-m-d') }} </span>
               <div class="btn-group btn-group-xs">
-                <button type="button" class="btn btn-primary js-order-switch-button" data-time="2016/09/01~2016/09/07"
+                <button type="button" class="btn btn-primary js-order-switch-button"
+                        data-time="{{ dates.weekDate }}~{{ 'now'|date('Y-m-d') }}"
                         data-url="{{ path('admin_order_statistic', {period: 'week'}) }}">{{ '最近7天'|trans }}</button>
-                <button type="button" class="btn btn-default js-order-switch-button" data-time="2016/09/01~2016/09/07"
+                <button type="button" class="btn btn-default js-order-switch-button"
+                        data-time="{{ dates.monthDate }}~{{ 'now'|date('Y-m-d') }}"
                         data-url="{{ path('admin_order_statistic',{period: 'month'}) }}">{{ '最近30天'|trans }}</button>
               </div>
             </div>
             <h3 class="panel-title">{{ '付费订单统计'|trans }}</h3>
           </div>
-          <div class="panel-body js-statistic-areas" id="pay-order-statistic" style="height:320px;">
+          <div class="panel-body js-statistic-areas" id="pay-order-statistic"
+               data-url="{{ path('admin_order_statistic', {period: 'week'}) }}" style="height:320px;">
 
           </div>
         </div>
@@ -106,11 +113,13 @@
         <div class="panel panel-default panel-420">
           <div class="panel-heading">
             <div class="pull-right">
-              <span class="mrl text-sm js-data-switch-time">2016/09/01~2016/09/07 </span>
+              <span class="mrl text-sm js-data-switch-time">{{ dates.weekDate }}~{{ 'now'|date('Y-m-d') }} </span>
               <div class="btn-group btn-group-xs">
-                <button type="button" class="btn btn-primary js-lesson-switch-button" data-time="2016/09/01~2016/09/07"
+                <button type="button" class="btn btn-primary js-lesson-switch-button"
+                        data-time="{{ dates.weekDate }}~{{ 'now'|date('Y-m-d') }}"
                         data-url="{{ path('admin_lesson_learn_statistic', {period: 'week'}) }}">{{ '最近7天'|trans }}</button>
-                <button type="button" class="btn btn-default js-lesson-switch-button" data-time="2016/09/01~2016/09/07"
+                <button type="button" class="btn btn-default js-lesson-switch-button"
+                        data-time="{{ dates.monthDate }}~{{ 'now'|date('Y-m-d') }}"
                         data-url="{{ path('admin_lesson_learn_statistic', {period: 'month'}) }}">{{ '最近30天'|trans }}</button>
               </div>
             </div>
@@ -129,15 +138,18 @@
           <div class="panel-heading">
             <div class="pull-right">
               <div class="btn-group btn-group-xs">
-                <button type="button" class="btn btn-primary js-course-switch-button" data-time="2016/09/01~2016/09/07"
+                <button type="button" class="btn btn-primary js-course-switch-button"
+                        data-time="{{ dates.weekDate }}~{{ 'now'|date('Y-m-d') }}"
                         data-url="{{ path('admin_course_explore', {period: 'week'}) }}">{{ '最近7天'|trans }}</button>
-                <button type="button" class="btn btn-default  js-course-switch-button" data-time="2016/09/01~2016/09/07"
+                <button type="button" class="btn btn-default  js-course-switch-button"
+                        data-time="{{ dates.monthDate }}~{{ 'now'|date('Y-m-d') }}"
                         data-url="{{ path('admin_course_explore', {period: 'month'}) }}">{{ '最近30天'|trans }}</button>
               </div>
             </div>
             <h3 class="panel-title">{{ '课程排行榜'|trans }}</h3>
           </div>
-          <div class="panel-body js-statistic-areas" id="course-explore-list" data-url="{{ path('admin_course_explore', {period: 'week'}) }}">
+          <div class="panel-body js-statistic-areas" id="course-explore-list"
+               data-url="{{ path('admin_course_explore', {period: 'week'}) }}">
 
           </div>
         </div>
@@ -162,113 +174,13 @@
       <div class="col-md-4">
         <div class="panel panel-default panel-420">
           <div class="panel-heading">
-            <a href="" class="pull-right">{{ '更多'|trans }}</a>
+            <a href="{{ path('admin_review') }}" class="pull-right">{{ '更多'|trans }}</a>
             <h3 class="panel-title">
               {{ '最新评价'|trans }}
             </h3>
           </div>
           <div class="panel-body">
-            <table class="table table-condensed table-noborder table-overflow">
-              <thead>
-              <tr>
-                <th width="70%">{{ '评价内容'|trans }}</th>
-                <th width="15%">{{ '评分'|trans }}</th>
-                <th width="15%">{{ '操作'|trans }}</th>
-              </tr>
-              </thead>
-              <tbody>
-              <tr>
-                <td>
-                  <a class="link-primary" href="">课程很不错，就是内容太少了课程很不错，就是内容太少了</a>
-                </td>
-                <td class="pull-right prl">5</td>
-                <td>
-                  <a href="" class="btn btn-default btn-xs">查看</a>
-                </td>
-              </tr>
-              <tr>
-                <td>
-                  <a class="link-primary" href="">课程很不错，就是内容太少了</a>
-                </td>
-                <td class="pull-right prl">5</td>
-                <td>
-                  <a href="" class="btn btn-default btn-xs">查看</a>
-                </td>
-              </tr>
-              <tr>
-                <td>
-                  <a class="link-primary" href="">课程很不错，就是内容太少了</a>
-                </td>
-                <td class="pull-right prl">5</td>
-                <td>
-                  <a href="" class="btn btn-default btn-xs">查看</a>
-                </td>
-              </tr>
-              <tr>
-                <td>
-                  <a class="link-primary" href="">课程很不错，就是内容太少了</a>
-                </td>
-                <td class="pull-right prl">5</td>
-                <td>
-                  <a href="" class="btn btn-default btn-xs">查看</a>
-                </td>
-              </tr>
-              <tr>
-                <td>
-                  <a class="link-primary" href="">课程很不错，就是内容太少了课程很不错，就是内容太少了</a>
-                </td>
-                <td class="pull-right prl">5</td>
-                <td>
-                  <a href="" class="btn btn-default btn-xs">查看</a>
-                </td>
-              </tr>
-              <tr>
-                <td>
-                  <a class="link-primary" href="">课程很不错，就是内容太少了</a>
-                </td>
-                <td class="pull-right prl">5</td>
-                <td>
-                  <a href="" class="btn btn-default btn-xs">查看</a>
-                </td>
-              </tr>
-              <tr>
-                <td>
-                  <a class="link-primary" href="">课程很不错，就是内容太少了</a>
-                </td>
-                <td class="pull-right prl">5</td>
-                <td>
-                  <a href="" class="btn btn-default btn-xs">查看</a>
-                </td>
-              </tr>
-              <tr>
-                <td>
-                  <a class="link-primary" href="">课程很不错，就是内容太少了</a>
-                </td>
-                <td class="pull-right prl">5</td>
-                <td>
-                  <a href="" class="btn btn-default btn-xs">查看</a>
-                </td>
-              </tr>
-              <tr>
-                <td>
-                  <a class="link-primary" href="">课程很不错，就是内容太少了课程很不错，就是内容太少了</a>
-                </td>
-                <td class="pull-right prl">5</td>
-                <td>
-                  <a href="" class="btn btn-default btn-xs">查看</a>
-                </td>
-              </tr>
-              <tr>
-                <td>
-                  <a class="link-primary" href="">课程很不错，就是内容太少了</a>
-                </td>
-                <td class="pull-right prl">5</td>
-                <td>
-                  <a href="" class="btn btn-default btn-xs">查看</a>
-                </td>
-              </tr>
-              </tbody>
-            </table>
+            {{ render(controller('TopxiaAdminBundle:Default:courseReview')) }}
           </div>
         </div>
       </div>
