--- a/web/assets/v2/less/main.less
+++ b/web/assets/v2/less/main.less
@@ -96,6 +96,7 @@
 @import "page/course-detail.less";        //课程页
 @import "page/course-list.less";          //课程选课页
 @import "page/course-manage.less";        //课程管理
+@import "page/course-manage2.less";        //课程管理2.0
 @import "page/class-detail.less";         //班级详情页
 @import "page/class-list.less";           //班级列表页
 @import "page/class-manage.less";         //班级管理页
